In switch statements, use CodeElementType instead of pattern matching (for Java 17+ backward compatibility)